--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-redux/store": "^10.0.0",
     "@angular/animations": "^8.2.14",
     "@angular/cdk": "^8.2.3",
     "@angular/common": "~8.0.0",
@@ -21,13 +22,17 @@
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^6.0.0",
+    "@ngrx/store": "^8.6.0",
     "bcrypt": "^3.0.8",
     "bootstrap": "^4.4.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "ng-multiselect-dropdown": "^0.2.10",
     "ngx-pagination": "^5.0.0",
+    "ngx-perfect-scrollbar": "^9.0.0",
     "popper": "^1.0.1",
+    "redux": "^4.0.5",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
