--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build  --aot --prod"
   },
   "private": true,
   "dependencies": {
@@ -33,6 +34,7 @@
     "bcrypt": "^3.0.8",
     "bootstrap": "^4.4.1",
     "core-js": "^2.5.4",
+    "express": "^4.17.1",
     "font-awesome": "4.7.0",
     "fullcalendar": "^3.10.1",
     "hammerjs": "^2.0.8",
@@ -77,5 +79,9 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
+  },
+  "engines": {
+    "node": "10.15.3",
+    "npm": "6.9.0"
   }
 }
