--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build  --aot --prod"
+    "postinstall": "ng build --prod"
   },
   "private": true,
   "dependencies": {
@@ -23,38 +23,38 @@
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
-    "@fullcalendar/angular": "^4.4.0",
-    "@fullcalendar/core": "^4.4.0",
-    "@fullcalendar/daygrid": "^4.4.0",
-    "@fullcalendar/interaction": "^4.4.0",
-    "@fullcalendar/timegrid": "^4.4.0",
-    "@ng-bootstrap/ng-bootstrap": "^6.0.2",
+    "@fullcalendar/angular": "^4.4.2",
+    "@fullcalendar/core": "^4.4.2",
+    "@fullcalendar/daygrid": "^4.4.2",
+    "@fullcalendar/interaction": "^4.4.2",
+    "@fullcalendar/timegrid": "^4.4.2",
+    "@ng-bootstrap/ng-bootstrap": "5.1.4",
     "@ng-select/ng-select": "^3.7.3",
     "@ngrx/store": "^8.6.0",
     "bcrypt": "^3.0.8",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.5.0",
     "core-js": "^2.5.4",
     "express": "^4.17.1",
     "font-awesome": "4.7.0",
-    "fullcalendar": "^3.10.1",
+    "fullcalendar": "^3.10.2",
     "hammerjs": "^2.0.8",
     "ionicons": "2.0.1",
-    "jquery": "^3.4.1",
-    "moment": "^2.24.0",
-    "ng-http-loader": "^7.0.0",
-    "ng-multiselect-dropdown": "^0.2.10",
+    "jquery": "^3.5.1",
+    "moment": "^2.26.0",
+    "ng-http-loader": "6.0.1",
+    "ng-multiselect-dropdown": "0.2.4",
     "ng-pick-datetime": "^7.0.0",
     "ng-pick-datetime-moment": "^1.0.8",
     "ng-valid-phone": "^1.0.3",
     "ng2-search-filter": "^0.5.1",
     "ngx-page-scroll-core": "^7.0.1",
     "ngx-pagination": "^5.0.0",
-    "ngx-perfect-scrollbar": "^9.0.0",
+    "ngx-perfect-scrollbar": "8.0.0",
     "ngx-toastr": "^10.2.0",
     "popper": "^1.0.1",
     "redux": "^4.0.5",
-    "rxjs": "~6.4.0",
-    "tslib": "^1.11.1",
+    "rxjs": "6.5.3",
+    "tslib": "^1.13.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
@@ -74,8 +74,8 @@
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.5.3",
-    "protractor": "^5.4.3",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "protractor": "^5.4.4",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
