--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,9 @@
     "importHelpers": true,
     "target": "es2015",
     "skipLibCheck": true,
+    "paths": {
+      "@angular/*": [ "node_modules/@angular/*"]
+    },
     "typeRoots": [
       "node_modules/@types"
     ],
